--- a/escalade/escalade-webapp/src/main/webapp/resources/css/style.css
+++ b/escalade/escalade-webapp/src/main/webapp/resources/css/style.css
@@ -13,3 +13,20 @@ h1 {
     color: #0000FF;
 }
 
+
+.table1 th {
+    padding: 10px;
+    margin: 10px;
+    border: 1px dotted gray;
+    background: grey;
+    text-align: center;
+}
+
+.table1 td{
+    padding: 10px;
+    margin: 10px;
+    border: 1px dotted gray;
+    background: white;
+    text-align: center;
+}
+
