--- a/escalade/escalade-webapp/src/main/webapp/resources/css/style.css
+++ b/escalade/escalade-webapp/src/main/webapp/resources/css/style.css
@@ -1,29 +1,29 @@
 
-/*.navbar {*/
-    /*margin: 0px;*/
-/*}*/
+.navbar {
+    margin: 0px;
+}
 
-/*.errors{*/
-    /*color: red;*/
-/*}*/
+.errors{
+    color: red;
+}
 
-/*h3{*/
-    /*color: red;*/
-    /*font-weight: bold;*/
-/*}*/
+h3{
+    color: red;
+    font-weight: bold;
+}
 
-/*.table th {*/
-    /*padding: 10px;*/
-    /*margin: 10px;*/
-    /*border: 1px dotted gray;*/
-    /*background: grey;*/
-    /*text-align: center;*/
-/*}*/
+.table th {
+    padding: 10px;
+    margin: 10px;
+    border: 1px dotted gray;
+    background: grey;
+    text-align: center;
+}
 
-/*.table td{*/
-    /*padding: 10px;*/
-    /*margin: 10px;*/
-    /*border: 1px dotted gray;*/
-    /*background: white;*/
-    /*text-align: center;*/
-/*}*/
+.table td{
+    padding: 10px;
+    margin: 10px;
+    border: 1px dotted gray;
+    background: white;
+    text-align: center;
+}
