function addUser updated
- searchSite.jsp updated

--- a/escalade/escalade-webapp/src/main/webapp/resources/css/style.css
+++ b/escalade/escalade-webapp/src/main/webapp/resources/css/style.css
@@ -28,6 +28,13 @@ h3{
     text-align: center;
 }
 
+.lignesEspacees {
+    border-collapse: separate;
+    border-spacing: 10px;
+    font-size: small;
+    font-weight: bold;
+}
+
 table {
     font-size: 80%;
 }
