--- a/escalade/escalade-webapp/src/main/webapp/resources/css/style.css
+++ b/escalade/escalade-webapp/src/main/webapp/resources/css/style.css
@@ -14,6 +14,24 @@
     color: red;
 }
 
+body {
+    background-color: #DDD
+}
+
+a.thumbnail:link{
+    /*text-decoration: none;*/
+}
+
+span.label{
+    position:relative;
+    top: -80px;
+    left: 20px;
+}
+
+.flotte {
+    float: right;
+}
+
 h3{
     /*color: red;*/
     font-weight: bold;
